Creamos el archivo sessionManager para gestionar las sessiones

--- a/nodepop/views/home.ejs
+++ b/nodepop/views/home.ejs
@@ -1,5 +1,7 @@
 <%- include('header.ejs') %>
 <div class="container">
+    <p>User ID: <%= session.userId %></p>
+
     <p>El segundo actual</p>
     <h2>ingrese productos usuario bucle</h2>
     <% products.forEach(product => { %>
