--- a/nodepop/views/home.ejs
+++ b/nodepop/views/home.ejs
@@ -3,13 +3,28 @@
     <p>User ID: <%= session.userId %></p>
 
     <p>El segundo actual</p>
-    <h2>ingrese productos usuario bucle</h2>
-    <% products.forEach(product => { %>
-        <p> producto: <%= product.name %> 
-            price:  <%= product.price %> 
-            foto: <a href=""><%= product.foto %></a> 
-            tags: <% product.tags %></p>
-    <% }) %>
+
+    <% // contenido para usuarios NO logados %>
+    <% if (!session.userId) { %>
+        <p>Para ver el contenido debe hacer <a href="/login">login</a></p>
+    <% } %>
+
+    <% // contenido para usuarios logados %>
+    <% if (session.userId) { %>
+        <h2>ingrese productos usuario bucle</h2>
+        <% products.forEach(product => { %>
+            <p> producto: <%= product.name %> 
+                price:  <%= product.price %> 
+                foto: <a href=""><%= product.foto %></a> 
+                tags: <% product.tags %></p>
+        <% }) %>
+    <% } %>
+
+
+
+
+
+
     <h2>Maquetado</h2>
 </div>
 
