--- a/nodepop/views/header.ejs
+++ b/nodepop/views/header.ejs
@@ -20,7 +20,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="/products/new">New Product</a>
             </li>
         </ul>
         <form class="d-flex" role="search">
